Combined multiple queries into one.

--- a/.httpd.conf
+++ b/.httpd.conf
@@ -1,4 +1,4 @@
-Listen 127.0.0.1:59409
+Listen 127.0.0.1:4614
 
 LoadModule mime_module "C:\Program Files\Jcx.Software\VS.Php\2010\apache2/modules/mod_mime.so"
 LoadModule dir_module "C:\Program Files\Jcx.Software\VS.Php\2010\apache2/modules/mod_dir.so"
@@ -11,7 +11,7 @@ LoadModule headers_module "C:\Program Files\Jcx.Software\VS.Php\2010\apache2/mod
 
 <IfDefine PHP_4>
 LoadModule cgi_module "C:\Program Files\Jcx.Software\VS.Php\2010\apache2/modules/mod_cgi.so"
-SetEnv PHPRC "C:/Program Files/Abyss Web Server/htdocs/P4P-Vliegbagage/"
+SetEnv PHPRC "C:\Documents and Settings\Administrator\Mijn documenten\GitHub\P4P-Vliegbagage"
 ScriptAlias /cgi-bin/ "C:/Program Files/Jcx.Software/VS.Php/2010/PHP 5.2/"
 
 AddType application/x-httpd-php .php .php4 .phtml
@@ -21,7 +21,7 @@ Action application/x-httpd-php "/cgi-bin/php.exe"
 #Use the below for CGI mode
 <IfDefine PHP_5_2_CGI>
 LoadModule cgi_module "C:\Program Files\Jcx.Software\VS.Php\2010\apache2/modules/mod_cgi.so"
-SetEnv PHPRC "C:/Program Files/Abyss Web Server/htdocs/P4P-Vliegbagage/"
+SetEnv PHPRC "C:\Documents and Settings\Administrator\Mijn documenten\GitHub\P4P-Vliegbagage"
 Action application/x-httpd-php "/cgi-bin/php-cgi.exe"
 ScriptAlias /cgi-bin/ "C:/Program Files/Jcx.Software/VS.Php/2010/PHP 5.2/"
 AddType application/x-httpd-php .php .php5 .phtml
@@ -33,13 +33,13 @@ AddType application/x-httpd-php .php .php5 .phtml
 LoadFile "C:/Program Files/Jcx.Software/VS.Php/2010/PHP 5.2/php5ts.dll"
 LoadModule php5_module "C:/Program Files/Jcx.Software/VS.Php/2010/PHP 5.2/php5apache2_2.dll"
 AddType application/x-httpd-php .php .php5 .phtml
-PHPINIDir "C:/Program Files/Abyss Web Server/htdocs/P4P-Vliegbagage/"
+PHPINIDir "C:\Documents and Settings\Administrator\Mijn documenten\GitHub\P4P-Vliegbagage"
 </IfDefine>
 
 #Use the below for CGI mode
 <IfDefine PHP_5_3_CGI>
 LoadModule cgi_module "C:\Program Files\Jcx.Software\VS.Php\2010\apache2/modules/mod_cgi.so"
-SetEnv PHPRC "C:/Program Files/Abyss Web Server/htdocs/P4P-Vliegbagage/"
+SetEnv PHPRC "C:\Documents and Settings\Administrator\Mijn documenten\GitHub\P4P-Vliegbagage"
 Action application/x-httpd-php "/cgi-bin/php-cgi.exe"
 ScriptAlias /cgi-bin/ "C:/Program Files/Jcx.Software/VS.Php/2010/PHP 5.2/"
 AddType application/x-httpd-php .php .php5 .phtml
@@ -51,13 +51,13 @@ AddType application/x-httpd-php .php .php5 .phtml
 LoadFile "C:/Program Files/Jcx.Software/VS.Php/2010/PHP 5.2/php5ts.dll"
 LoadModule php5_module "C:/Program Files/Jcx.Software/VS.Php/2010/PHP 5.2/php5apache2_2.dll"
 AddType application/x-httpd-php .php .php5 .phtml
-PHPINIDir "C:/Program Files/Abyss Web Server/htdocs/P4P-Vliegbagage/"
+PHPINIDir "C:\Documents and Settings\Administrator\Mijn documenten\GitHub\P4P-Vliegbagage"
 </IfDefine>
 
 #Use the below for CGI mode
 <IfDefine PHP_5_4_CGI>
 LoadModule cgi_module "C:\Program Files\Jcx.Software\VS.Php\2010\apache2/modules/mod_cgi.so"
-SetEnv PHPRC "C:/Program Files/Abyss Web Server/htdocs/P4P-Vliegbagage/"
+SetEnv PHPRC "C:\Documents and Settings\Administrator\Mijn documenten\GitHub\P4P-Vliegbagage"
 Action application/x-httpd-php "/cgi-bin/php-cgi.exe"
 ScriptAlias /cgi-bin/ "C:/Program Files/Jcx.Software/VS.Php/2010/PHP 5.2/"
 AddType application/x-httpd-php .php .php5 .phtml
@@ -69,7 +69,7 @@ AddType application/x-httpd-php .php .php5 .phtml
 LoadFile "C:/Program Files/Jcx.Software/VS.Php/2010/PHP 5.2/php5ts.dll"
 LoadModule php5_module "C:/Program Files/Jcx.Software/VS.Php/2010/PHP 5.2/php5apache2_2.dll"
 AddType application/x-httpd-php .php .php5 .phtml
-PHPINIDir "C:/Program Files/Abyss Web Server/htdocs/P4P-Vliegbagage/"
+PHPINIDir "C:\Documents and Settings\Administrator\Mijn documenten\GitHub\P4P-Vliegbagage"
 </IfDefine>
 
 DirectoryIndex index.php index.html
@@ -84,7 +84,7 @@ ServerName localhost
 
 SetEnv APPLICATION_ENV development
 
-DocumentRoot "C:/Program Files/Abyss Web Server/htdocs/P4P-Vliegbagage"
+DocumentRoot "C:/Documents and Settings/Administrator/Mijn documenten/GitHub/P4P-Vliegbagage"
 
 ThreadsPerChild 10
 MaxRequestsPerChild  0
